2022-05-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	Fix insensitivity of groff(1) man page to configured spooler.

	* Makefile.am (.man): Replace `@PSPRINT@` in man page sources
	with name of configured print spooler command.
	* src/roff/groff/groff.1.man (Options) <-l>: Use configured
	print spooler command instead of literal 'lpr'.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_UCHARDET_CHECK): Fix grammar nit in failure
	message when user demands uchardet support but the library
	cannot be located.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_CHECK_GROHTML_PROGRAMS): Fix logic error in
	computation of verb to be used in notice message.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PROG_YACC, GROFF_URW_FONTS_CHECK,
	GROFF_WITH_COMPATIBILITY_WRAPPERS, GROFF_UCHARDET_NOTICE):
	Improve shell code portability.  Per the GNU Autoconf manual,
	"The -a, -o, '(', and ')' operands are not present in all
	implementations, and have been marked obsolete by Posix 2008.
	...portable uses of test should never have more than four
	arguments, and scripts should use shell constructs like '&&' and
	'||' instead."

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.1.man (Installation directories): Don't
	output a tagged paragraph for the X11 application defaults
	directory if the build symbol '@APPRESDIR@' is not defined (that
	is, we didn't build with X11 support).

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_GHOSTSCRIPT_VERSION_CHECK): Fix code style
	nits.  Use lowercase for shell variables we define.  Don't quote
	literal operands to test(1) that don't contain syntactically
	shell-significant characters.  Update indentation to match
	recent practice.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>
