@@ -1,5 +1,13 @@
 2022-05-25  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* m4/groff.m4 (GROFF_PRINT): Refactor.  Stop performing checks
+	for spooler options if none is available.  Stop redundantly
+	reporting command name used for spooling PostScript files.  If
+	an option is required for spooling DVI files, report it alone
+	instead of repeating the command name as well.
+
+2022-05-25  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	Fix insensitivity of groff(1) man page to configured spooler.
 
 	* Makefile.am (.man): Replace `@PSPRINT@` in man page sources
